@@ -2,7 +2,9 @@ package de.szut.lf8_starter.project;
 
 import de.szut.lf8_starter.employee.EmployeeEntity;
 import de.szut.lf8_starter.project.dto.ProjectCreateDto;
+import de.szut.lf8_starter.project.dto.ProjectEmployeesDto;
 import de.szut.lf8_starter.project.dto.ProjectGetDto;
+import de.szut.lf8_starter.project.dto.ProjectUpdateDto;
 import org.springframework.stereotype.Service;
 
 import java.util.stream.Collectors;
@@ -40,7 +42,7 @@ public class ProjectMapper {
         if (entity.getEmployees() != null) {
             dto.setEmployees(entity.getEmployees().stream()
                     .map(this::mapEmployeeEntityToDto)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         return dto;
@@ -53,5 +55,38 @@ public class ProjectMapper {
         dto.setStartDate(entity.getStartDate());
         dto.setEndDate(entity.getEndDate());
         return dto;
+    }
+
+    public ProjectEmployeesDto mapEntityToEmployeesDto(ProjectEntity entity) {
+        ProjectEmployeesDto dto = new ProjectEmployeesDto();
+        dto.setProjectId(entity.getId());
+        dto.setProjectName(entity.getName());
+
+        if (entity.getEmployees() != null) {
+            dto.setEmployees(entity.getEmployees().stream()
+                    .map(this::mapEmployeeEntityToEmployeeRoleDto)
+                    .toList());
+        }
+
+        return dto;
+    }
+
+    private ProjectEmployeesDto.EmployeeRoleDto mapEmployeeEntityToEmployeeRoleDto(EmployeeEntity entity) {
+        ProjectEmployeesDto.EmployeeRoleDto dto = new ProjectEmployeesDto.EmployeeRoleDto();
+        dto.setEmployeeId(entity.getEmployeeId());
+        dto.setRoleId(entity.getRoleId());
+        return dto;
+    }
+
+    public void updateEntityFromDto(ProjectUpdateDto dto, ProjectEntity entity) {
+        entity.setName(dto.getName());
+        entity.setResponsibleEmployeeId(dto.getResponsibleEmployeeId());
+        entity.setClientId(dto.getClientId());
+        entity.setClientContactName(dto.getClientContactName());
+        entity.setComment(dto.getComment());
+        entity.setStartDate(dto.getStartDate());
+        entity.setPlannedEndDate(dto.getPlannedEndDate());
+        entity.setActualEndDate(dto.getActualEndDate());
+        entity.setQualificationIds(dto.getQualificationIds());
     }
 }
